1.0.1: Fix boxes CSS overlapping

--- a/public/css/wiidatabase-toolkit-public.css
+++ b/public/css/wiidatabase-toolkit-public.css
@@ -3,6 +3,8 @@
 /* Outer box */
 
 .wiidatabase-box {
+    overflow: hidden;
+    width: 100%;
     margin-bottom: 1rem;
     margin-top: 1rem;
     line-height: 1.5;
